--- a/force-app/main/default/classes/AdyenConstants.cls
+++ b/force-app/main/default/classes/AdyenConstants.cls
@@ -1,6 +1,4 @@
-public with sharing
-
-class AdyenConstants {
+public with sharing class AdyenConstants {
     public static final String PACKAGE_VERSION = '2.0.0';
     public static final String PACKAGE_NAME = 'adyen-salesforce-b2b-commerce';
     public static final String PLATFORM_NAME = 'SalesforceB2BCommerce';
