--- a/force-app/main/default/classes/AdyenPaymentRequest.cls
+++ b/force-app/main/default/classes/AdyenPaymentRequest.cls
@@ -1,6 +1,4 @@
-public with sharing
-
-class AdyenPaymentRequest {
+public with sharing class AdyenPaymentRequest {
     public static PaymentRequest createPaymentRequest(String stateData, ccrz__E_Cart__c cart, Merchant__mdt merchant) {
         PaymentRequest paymentRequest = createPaymentRequestFromStateData(stateData);
         paymentRequest.merchantAccount = merchant.Name__c;
