--- a/force-app/main/default/classes/PmtAdyenPayController.cls
+++ b/force-app/main/default/classes/PmtAdyenPayController.cls
@@ -1,19 +1,13 @@
-global with sharing
+global with sharing class PmtAdyenPayController {
 
-class PmtAdyenPayController {
-
-    public Boolean isGuest
-
-    {
+    public Boolean isGuest {
         get {
-        return UserInfo.getUserType() == 'Guest';
-    }
+            return UserInfo.getUserType() == 'Guest';
+        }
     }
 
     @RemoteAction
-    global
-
-    static ccrz.cc_RemoteActionResult getPaymentMethods(ccrz.cc_RemoteActionContext ctx) {
+    global static ccrz.cc_RemoteActionResult getPaymentMethods(ccrz.cc_RemoteActionContext ctx) {
         ccrz.cc_RemoteActionResult res = ccrz.cc_CallContext.init(ctx);
         try {
             ccrz__E_Cart__c cart = AdyenUtil.getCartFromDatabase(ctx.currentCartId);
@@ -39,9 +33,7 @@ class PmtAdyenPayController {
     }
 
     @RemoteAction
-    global
-
-    static ccrz.cc_RemoteActionResult placeOrderAdyen(ccrz.cc_RemoteActionContext ctx, String stateData) {
+    global static ccrz.cc_RemoteActionResult placeOrderAdyen(ccrz.cc_RemoteActionContext ctx, String stateData) {
         ccrz.cc_RemoteActionResult res = ccrz.cc_CallContext.init(ctx);
         try {
             ccrz.cc_hk_Payment paymentHook = ccrz.cc_hk_Payment.getInstance(null);
@@ -52,23 +44,23 @@ class PmtAdyenPayController {
             //Use token for stateData
             inputParams.put('token', stateData);
 
-            Map<String, Object> paymentProcessorInput = new Map<String, Object> {
-                ccrz.cc_hk_Payment.PARAM_TRANSACTION_DATA =>JSON.serialize(inputParams), //stateData,
-                        ccrz.cc_hk_Payment.PARAM_PAYMENT_CTX =>ccrz.cc_hk_Payment.PAYMENT_CTX_CHECKOUT,
-                        ccrz.cc_hk_Payment.PARAM_CART =>cart,
-                        ccrz.cc_hk_Payment.PARAM_ACCOUNT_TYPE =>'adyencc'
+            Map<String, Object> paymentProcessorInput = new Map<String, Object>{
+                    ccrz.cc_hk_Payment.PARAM_TRANSACTION_DATA => JSON.serialize(inputParams), //stateData,
+                    ccrz.cc_hk_Payment.PARAM_PAYMENT_CTX => ccrz.cc_hk_Payment.PAYMENT_CTX_CHECKOUT,
+                    ccrz.cc_hk_Payment.PARAM_CART => cart,
+                    ccrz.cc_hk_Payment.PARAM_ACCOUNT_TYPE => 'adyencc'
             } ;
 
             Map<String, Object> processResult = paymentHook.processPayment(paymentProcessorInput);
             //TODOBAS return paymentResponse if not isFinal
 
             //Here starts the Place Order
-            Map<String, Object> placeParams = new Map<String, Object> {
-                ccrz.ccApi.API_VERSION =>9,
-                        ccrz.ccApiCart.TRANSPAYMENTDATA =>
-                processResult.get(ccrz.cc_hk_Payment.PARAM_TRANSACTION_PROCESSED_DATA),
-                        ccrz.ccApiCart.PAYMENTRESULT =>processResult,
-                        ccrz.ccApiCart.CART_ENCID =>cart.Id
+            Map<String, Object> placeParams = new Map<String, Object>{
+                    ccrz.ccApi.API_VERSION => 9,
+                    ccrz.ccApiCart.TRANSPAYMENTDATA =>
+                            processResult.get(ccrz.cc_hk_Payment.PARAM_TRANSACTION_PROCESSED_DATA),
+                    ccrz.ccApiCart.PAYMENTRESULT => processResult,
+                    ccrz.ccApiCart.CART_ENCID => cart.Id
             } ;
             if (Test.isRunningTest()) {
                 placeParams.put(ccrz.ccApiCart.SKIP_VALID_CHECK, true);
@@ -96,10 +88,15 @@ class PmtAdyenPayController {
 //           //TODOBAS Fail the order
 //        }
         String orderId = (String) placeResult.get('orderId');
-        ccrz__E_Order__c[] placedOrder = [SELECT Id, ccrz__EncryptedId__c FROM ccrz__E_Order__c WHERE Id =:orderId LIMIT
-        1];
+        ccrz__E_Order__c[] placedOrder = [
+                SELECT Id, ccrz__EncryptedId__c
+                FROM ccrz__E_Order__c
+                WHERE Id = :orderId
+                LIMIT
+                        1
+        ];
         Map<String, String> orderResult = new Map<String, String>();
-        if (placedOrder <>null && placedOrder.size() == 1){
+        if (placedOrder <> null && placedOrder.size() == 1) {
             orderResult.put('ordId', placedOrder[0].ccrz__EncryptedId__c);
         }
         res.success = true;
