Send action to frontend

--- a/force-app/main/default/classes/AdyenResponseHandler.cls
+++ b/force-app/main/default/classes/AdyenResponseHandler.cls
@@ -23,6 +23,7 @@ public with sharing class AdyenResponseHandler {
                 };
             }
             when else {
+                System.Debug('## Unknown resultCode: ' + resultCode);
                 return new Map<String, Object>{
                         'isFinal' => true,
                         'resultCode' => resultCode
